# speedrace-autosplit

./: .gitignore  README.md
.github/workflows/: build-wasm.yml
autosplit-engine/: Cargo.toml
autosplit-engine/src/: counter.rs  dotnet.rs  lib.rs  run.rs  settings_xml.rs
autosplit-gui-tester/: Cargo.toml
autosplit-gui-tester/src/: lss.rs  main.rs  runtime.rs  shared.rs  timer.rs  ui.rs
autosplit-tester/: Cargo.toml
autosplit-tester/src/: main.rs
celeste-autosplitter/: Cargo.toml  README.md
celeste-autosplitter/.cargo/: config.toml
celeste-autosplitter/src/: consts.rs  everest.rs  game.rs  lib.rs  memory.rs  splits.rs  state.rs
